--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    tools:context=".MainActivity">
+    tools:context="com.naesseuapp.lotto.MainActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/randomCard"
