--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NameActivity">
+    tools:context="com.naesseuapp.lotto.NameActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidline1"
