--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/lottery" />
+                    android:src="@drawable/constellation" />
 
             </LinearLayout>
         </LinearLayout>
@@ -147,7 +147,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/lottery" />
+                    android:src="@drawable/name" />
 
             </LinearLayout>
         </LinearLayout>
