--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
+        app:layout_constraintGuide_end="585dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidline2"
@@ -25,12 +25,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="8dp"
+
         app:layout_constraintBottom_toTopOf="@+id/guidline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guidline1"
         app:layout_constraintVertical_bias="0.491"
-        app:srcCompat="@mipmap/ic_launcher"/>
+        app:srcCompat="@drawable/name"/>
 
     <EditText
         android:id="@+id/editText"
